Update
slowly fixing routes:
auth works
recipes:
post and get/recipes works,
need to check others
